# RSU-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug.sh  update_submodules.sh
libs/SDL/: CMakeLists.txt
libs/SDL/include/SDL/: SDL_main.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
libs/imgui/src/: imgui.cpp
libs/quaternion/: CMakeLists.txt
libs/quaternion/src/: Makefile.mac  Makefile.unix  Makefile.win  Makefile.windows  animUtils.cpp  quaternion.cbp  quaternion.depend  quaternion.dev
not_used/: point.cpp  point.hpp
project-libs/camera/: CMakeLists.txt
project-libs/camera/include/camera/: camera.hpp
project-libs/camera/src/: camera.cpp
project-libs/mainmenu/: CMakeLists.txt
project-libs/mainmenu/include/mainmenu/: mainmenu.hpp
project-libs/mainmenu/src/: mainmenu.cpp
project-libs/shader/: CMakeLists.txt
project-libs/shader/include/shader/: shader.hpp
project-libs/shader/src/: shader.cpp
project-libs/shapes/: CMakeLists.txt
project-libs/shapes/include/shapes/: point.hpp  sphere.hpp
project-libs/solution/: CMakeLists.txt
project-libs/solution/include/solution/: solution.hpp
project-libs/solution/src/: solution.cpp
project-libs/window/: CMakeLists.txt
project-libs/window/include/window/: window.hpp
project-libs/window/src/: window.cpp
shaders/: apply.frag  apply.vert  dashed.frag  dashed.vert  default.frag  default.vert  fxaa.frag  fxaa.vert
src/: main.cpp
